Fixes at pagination's button icon alignments

--- a/Frontend/app/styles/scss/base/_forms.scss
+++ b/Frontend/app/styles/scss/base/_forms.scss
@@ -634,7 +634,7 @@ ul.pagination > li[title="Last Page"] {
   display:none!important;
 }
 
-form.simple-pagination > div > span > a.btn.btn-default.small.small-bt-header{
+form.simple-pagination > div > span > button.btn.btn-default.small.small-bt-header{
   	border: solid 3px #008937 !important;
   	color: #008937 !important;
 	margin-top: 0px !important;
